// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-parser.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---mycustomparser
  
title: Hello
slug: home

---

<h1>
  Hello world!</h1>

=====================================output=====================================
---mycustomparser
  
title: Hello
slug: home

---

<h1>Hello world!</h1>

================================================================================
`;

exports[`empty.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
---

<h1>
  Hello world!</h1>

=====================================output=====================================
---
---

<h1>Hello world!</h1>

================================================================================
`;

exports[`empty2.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
---

<div>
---
</div>

=====================================output=====================================
---
---

<div>---</div>

================================================================================
`;

exports[`issue-9042.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
layout: foo
---

Test <a
href="https://prettier.io">abc</a>.

=====================================output=====================================
---
layout: foo
---

Test <a href="https://prettier.io">abc</a>.

================================================================================
`;

exports[`issue-9042-no-empty-line.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
layout: foo
---
Test <a
href="https://prettier.io">abc</a>.

=====================================output=====================================
---
layout: foo
---

Test <a href="https://prettier.io">abc</a>.

================================================================================
`;
